--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,3 +17,16 @@ textarea {
 .title {
   font-size: 1em !important;
 }
+
+span.case-number {
+    display: block;
+    height: 48px;
+    width: 48px;
+    line-height: 50px;
+    -moz-border-radius: 24px;
+    border-radius: 24px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: .8em;
+}
