--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,32 +1,59 @@
 .spacer {
   height: 10px;
 }
-
 .dirty {
   background: url('../img/corner.png') no-repeat left top !important;
 }
-
 textarea {
   padding-top: 1em;
 }
-
 .item-avatar > img {
   border-radius: 0 !important;
 }
-
 .title {
   font-size: 1em !important;
 }
-
 span.case-number {
-    display: block;
-    height: 48px;
-    width: 48px;
-    line-height: 50px;
-    -moz-border-radius: 24px;
-    border-radius: 24px;
-    background-color: black;
-    color: white;
-    text-align: center;
-    font-size: .8em;
+  display: block;
+  height: 48px;
+  width: 48px;
+  line-height: 50px;
+  -moz-border-radius: 24px;
+  border-radius: 24px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: .8em;
+}
+fancy-select .list {
+  margin: -1px 0;
+}
+/* Items */
+/* line 13, ../scss/modules/_fancy-select.scss */
+
+.fancy-select-items {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+/* line 19, ../scss/modules/_fancy-select.scss */
+
+.fancy-select-items .item {
+  overflow: hidden;
+  /* Clearfix */
+}
+/* line 24, ../scss/modules/_fancy-select.scss */
+
+.fancy-select-items label p {
+  height: 32px;
+  line-height: 32px;
+}
+/* line 29, ../scss/modules/_fancy-select.scss */
+
+.fancy-select-icon {
+  float: left;
+  margin-right: 10px;
+  width: 30px;
+  text-align: center;
 }
