--- a/www/templates/fancy-select.html
+++ b/www/templates/fancy-select.html
@@ -1,9 +1,10 @@
-<ion-list>
-  <ion-item class="item-text-wrap" ng-click="showItems($event)">
+<label class="item item-input item-select" ng-click="showItems($event)" ng-class="{dirty: isDirty}">
+  <div class="input-label">{{label}}</div>
+  <div class="select">
     {{text}}
     <span class="item-note">
       {{noteText}}
       <img class="{{noteImgClass}}" ng-if="noteImg != ''" src="{{noteImg}}" />
     </span>
-  </ion-item>
-</ion-list>
+  </div>
+</label>
