--- a/www/templates/fancy-select.html
+++ b/www/templates/fancy-select.html
@@ -1,4 +1,4 @@
-<label class="item item-input item-select" ng-click="showItems($event)" ng-class="{dirty: isDirty}">
+<label class="item item-input item-select" ng-click="showItems($event)">
   <div class="input-label">{{label}}</div>
   <div class="select">
     {{text}}
