--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable">
+        <ion-nav-bar class="bar-positive">
             <ion-nav-back-button>
             </ion-nav-back-button>
             <ion-nav-buttons side="left">
@@ -17,9 +17,9 @@
             <ion-list>
               <div class="item item-input-inset">
                 <label class="item-input-wrapper">
-                  <input type="text" placeholder="Search">
+                  <input type="text" placeholder="Search" name="search" ng-model="s.searchString">
                 </label>
-                <button class="button button-small">
+                <button class="button button-small" ng-click="search()">
                   Submit
                 </button>
               </div>
