--- a/www/templates/fancy-select.html
+++ b/www/templates/fancy-select.html
@@ -1,5 +1,5 @@
 <label class="item item-input item-select" ng-click="showItems($event)">
-  <div class="input-label">{{label}}</div>
+  <div class="input-label subdued">{{label}}</div>
   <div class="select">
     {{text}}
     <span class="item-note">
