--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,7 +17,7 @@ span.case-number {
   display: block;
   height: 48px;
   width: 48px;
-  line-height: 50px;
+  line-height: 48px;
   -moz-border-radius: 24px;
   border-radius: 24px;
   background-color: black;
@@ -158,4 +158,7 @@ button.button-icon.round-overlay-button.bottom-right {
 }
 button.button-icon.round-overlay-button.bottom-right.slide-down {
   transform: translate3d(0, 88px, 0);
+}
+div.subdued {
+  color: #909090;
 }
