--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -3,6 +3,8 @@
     <div class="padding">
       <h5 class="subdued">All cases</h5>
     </div>
+    <ion-refresher pulling-text="Pull to refresh" on-refresh="doRefresh()">
+    </ion-refresher>
     <div class="list">
       <a class="item" style="padding: .4em;" ng-repeat="bug in cases" href="#/app/cases/{{bug.ixBug}}">
         <div class="row">
