Started working new case button

--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -19,7 +19,7 @@
       </a>
     </div>
   </ion-content>
-  <button class="round-overlay-button bottom-right assertive button button-icon icon ion-ios7-search-strong light">
+  <button ng-click="newCase()" class="round-overlay-button bottom-right assertive button button-icon icon ion-ios7-search-strong light">
     <i class="icon ion-plus"></i>
   </button>
 </ion-view>
