--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -12,9 +12,9 @@
   <ion-content>
     <div class="list card">
       <div class="item item-divider">
-        Case {{case.ixBug}}
+        <span ng-show="ready">Case {{case.ixBug}}</span>
       </div>
-      <div class="item item-avatar item-text-wrap">
+      <div class="item item-avatar item-text-wrap" ng-show="ready">
         <img ng-src="{{ iconImage }}">
         <h2>{{ case.sTitle.__cdata }}</h2>
         <p><a href="#">{{ case.sProject.__cdata }}</a>: <a href="#">{{ case.sArea.__cdata }}</a> (Milestone: <a href="#">{{ case.sFixFor.__cdata }}</a>)</p>
