--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -9,14 +9,14 @@
       <div class="card">
         <div class="list">
           <label class="item item-divider">
-            Edit Case {{ case.ixBug }} ({{case.sStatus.__cdata}})
+            {{ label }}
           </label>
           <label class="item item-input">
-            <input type="text" name="title" ng-model="case.sTitle.__cdata" class="title">
+            <input type="text" name="title" ng-model="case.sTitle.__cdata" class="title" placeholder="Case title...">
           </label>
           <label class="item item-divider">
-            <h3>Edited by logged in user</h3>
-            <h4 class="subdued">Current date</h4>
+            <h3>{{ touched }}</h3>
+            <h4 class="subdued">{{ date }}</h4>
           </label>
           <label class="item item-input">
             <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.newEvent" placeholder="Add a case note..."></textarea>
