Got filter names mostly working
Still need to set the name of the default current filter on first load.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -162,3 +162,6 @@ button.button-icon.round-overlay-button.bottom-right.slide-down {
 div.subdued {
   color: #909090;
 }
+h5.subdued {
+  color: #909090;
+}
