--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Cases">
   <ion-content>
     <div class="padding">
-      <h5 class="subdued">All cases</h5>
+      <h5 class="subdued">{{ filterDescription }}</h5>
     </div>
     <ion-refresher pulling-text="Pull to refresh" on-refresh="doRefresh()">
     </ion-refresher>
