Started working case resolve

--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side="right">
     <button class="button button-icon icon ion-person">
     </button>
-    <button class="button button-icon icon ion-checkmark">
+    <button class="button button-icon icon ion-checkmark" ng-click="resolveCase()">
     </button>
     <button class="button button-icon icon ion-edit" ng-click="editCase()">
     </button>
