--- a/www/templates/more-actions.html
+++ b/www/templates/more-actions.html
@@ -14,7 +14,7 @@
         <i class="icon ion-refresh"></i> Refresh
       </a>
       <a class="item" target="_blank">
-        <i class="icon ion-refresh"></i> Share
+        <i class="icon ion-refresh"></i> Email
       </a>
     </div>
   </ion-content>
