--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -1,9 +1,9 @@
 <ion-modal-view>
   <form name="form.edit" ng-submit="save()">
     <ion-header-bar class="bar-positive">
-      <button type="button" class="button" ng-click="cancel()">Cancel</button>
+      <button type="button" class="button button-clear" ng-click="cancel()">Cancel</button>
       <h1 class="title"></h1>
-      <button type="submit" class="button button-positive">Save</button>
+      <button type="submit" class="button button-clear">Save</button>
     </ion-header-bar>
     <ion-content scroll="true">
       <div class="card">
