--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -10,11 +10,13 @@
   </ion-nav-buttons>
   <ion-content>
     <div class="list card">
-      <div class="item item-divider">
-        <span ng-show="ready">Case {{case.ixBug}}</span>
+      <div class="item item-divider item-icon-right">
+        <span ng-show="ready">
+          <strong>{{case.ixBug}}</strong>
+          <i class="icon ion-ios-star star" ng-click="starCase()"></i>
+        </span>
       </div>
-      <div class="item item-avatar item-text-wrap" ng-show="ready">
-        <img ng-src="{{ iconImage }}">
+      <div class="item item-text-wrap" ng-show="ready">
         <h2>{{ case.sTitle.__cdata }}</h2>
         <p><a href="#">{{ case.sProject.__cdata }}</a>: <a href="#">{{ case.sArea.__cdata }}</a> (Milestone: <a href="#">{{ case.sFixFor.__cdata }}</a>)</p>
       </div>
