--- a/www/templates/more-actions.html
+++ b/www/templates/more-actions.html
@@ -1,20 +1,11 @@
 <ion-popover-view>
   <ion-content>
     <div class="list">
-      <a class="item" target="_blank">
-        <i class="icon ion-person"></i> Assign
-      </a>
-      <a class="item" target="_blank">
-        <i class="icon ion-checkmark"></i> Resolve
-      </a>
-      <a class="item" target="_blank" ng-click="editCase()">
-        <i class="icon ion-edit"></i> Edit
-      </a>
-      <a class="item" target="_blank">
+      <a class="item" target="_blank" ng-click="refresh()">
         <i class="icon ion-refresh"></i> Refresh
       </a>
-      <a class="item" target="_blank">
-        <i class="icon ion-refresh"></i> Email
+      <a class="item" target="_blank" ng-click="emailCase()">
+        <i class="icon ion-email"></i> Email
       </a>
     </div>
   </ion-content>
