--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,62 +1,56 @@
 <ion-side-menus enable-menu-with-back-views="false">
-    <ion-side-menu-content>
-        <ion-nav-bar class="bar-positive">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-            <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-        <ion-nav-view name="menuContent"></ion-nav-view>
-    </ion-side-menu-content>
-    <ion-side-menu side="left">
-        <ion-header-bar class="bar-positive">
-            <h1 class="title">Title</h1>
-        </ion-header-bar>
-        <ion-content>
-            <ion-list>
-              <div class="item item-input-inset">
-                <label class="item-input-wrapper">
-                  <input type="text" placeholder="Search" name="search" ng-model="s.searchString">
-                </label>
-                <button class="button button-small" ng-click="search()">
-                  Submit
-                </button>
-              </div>
-              <ion-item class="item-icon-left" nav-clear menu-close ng-repeat="f in builtinFilters" ng-click="setFilter(f._sFilter, f.__text)">
-                  <i class="icon ion-android-funnel"></i>
-                  {{ f.__text }}
-              </ion-item>
-              <div class="item item-divider" ng-show="savedFilters.length > 0">
-                Saved Filters
-              </div>
-              <ion-item class="item-icon-left" nav-clear menu-close ng-repeat="f in savedFilters" ng-click="setFilter(f._sFilter, f.__cdata)">
-                <i class="icon ion-android-funnel"></i>
-                {{ f.__cdata }}
-              </ion-item>
-              <div class="item item-divider" ng-show="sharedFilters.length > 0">
-                Shared Filters
-              </div>
-              <ion-item class="item-icon-left" nav-clear menu-close ng-repeat="f in sharedFilters" ng-click="setFilter(f._sFilter, f.__cdata)">
-                <i class="icon ion-android-funnel"></i>
-                {{ f.__cdata }}
-              </ion-item>
-              <div class="item item-divider">
-                Options
-              </div>
-              <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
-                <i class="icon ion-gear-a"></i>
-                App Settings
-              </ion-item>
-              <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
-                <i class="icon ion-help"></i>
-                Help
-              </ion-item>
-              <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
-                <i class="icon ion-log-out"></i>
-                Logout
-              </ion-item>
-            </ion-list>
-        </ion-content>
-    </ion-side-menu>
+  <ion-side-menu-content>
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+      <ion-nav-buttons side="left">
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+      </ion-nav-buttons>
+    </ion-nav-bar>
+    <ion-nav-view name="menuContent"></ion-nav-view>
+  </ion-side-menu-content>
+  <ion-side-menu side="left">
+    <ion-content>
+      <div class="tall">
+        <img src="img/menu-background.png"/>
+      </div>
+      <ion-list>
+        <div class="item item-input-inset">
+          <label class="item-input-wrapper">
+            <input type="text" placeholder="Search" name="search" ng-model="s.searchString">
+          </label>
+          <button class="button button-small" ng-click="search()">
+            Submit
+          </button>
+        </div>
+        <ion-item class="item-icon-left" nav-clear menu-close ng-repeat="f in builtinFilters" ng-click="setFilter(f._sFilter, f.__text)">
+          <i class="icon ion-android-funnel"></i> {{ f.__text }}
+        </ion-item>
+        <div class="item item-divider" ng-show="savedFilters.length > 0">
+          Saved Filters
+        </div>
+        <ion-item class="item-icon-left" nav-clear menu-close ng-repeat="f in savedFilters" ng-click="setFilter(f._sFilter, f.__cdata)">
+          <i class="icon ion-android-funnel"></i> {{ f.__cdata }}
+        </ion-item>
+        <div class="item item-divider" ng-show="sharedFilters.length > 0">
+          Shared Filters
+        </div>
+        <ion-item class="item-icon-left" nav-clear menu-close ng-repeat="f in sharedFilters" ng-click="setFilter(f._sFilter, f.__cdata)">
+          <i class="icon ion-android-funnel"></i> {{ f.__cdata }}
+        </ion-item>
+        <div class="item item-divider">
+          Options
+        </div>
+        <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
+          <i class="icon ion-gear-a"></i> App Settings
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
+          <i class="icon ion-help"></i> Help
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
+          <i class="icon ion-log-out"></i> Logout
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-side-menu>
 </ion-side-menus>
