--- a/www/templates/fancy-select-items.html
+++ b/www/templates/fancy-select-items.html
@@ -1,5 +1,5 @@
 <ion-view class="fancy-select-items modal">
-  <ion-header-bar class="bar-positive">
+  <ion-header-bar class="bar-positive tropic">
     <button ng-click="hideItems()" class="button button-positive button-icon ion-chevron-left"></button>
     <h1 class="title">{{headerText}}</h1>
   </ion-header-bar>
