--- a/www/templates/resolve.html
+++ b/www/templates/resolve.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-positive">
+  <ion-header-bar class="bar-positive tropic">
     <div class="buttons">
       <button type="button" class="button button-clear" ng-click="cancel()">Cancel</button>
     </div>
@@ -26,13 +26,13 @@
         </label>
         <label class="item tabs tabs-secondary tabs-icon-left">
           <a class="tab-item" href="#">
-            <i class="icon ion-location positive"></i>
+            <i class="icon ion-location tropic"></i>
           </a>
           <a class="tab-item" href="#">
-            <i class="icon ion-mic-a positive"></i>
+            <i class="icon ion-mic-a tropic"></i>
           </a>
           <a class="tab-item" href="#">
-            <i class="icon ion-camera positive"></i>
+            <i class="icon ion-camera tropic"></i>
           </a>
         </label>
         <label class="item item-input">
